tests/compile-fail/suzu_from_conflicts_existing_snafu_source.stderr
error: `from` conflicts with existing `#[snafu(source(...))]`
 --> tests/compile-fail/suzu_from_conflicts_existing_snafu_source.rs:7:5
  |
7 |     #[suzu(from)]
  |     ^
